syntax = "proto3";

import "proto/conabit/englearn/common/session.proto";

package conabit.englearn.collection;

option go_package = "github.com/Conabit-Corp/EngLearn/proto/conabit/englearn/collection";

service WordService {
  rpc RegisterWordPair(RegisterWordPairRequest) returns (WordPair) {}

  rpc CloneWordPair(CloneWordPairRequest) returns (WordPair) {}

  rpc FindUserWords(LogOutRequest) returns (stream WordPair) {}
}

message WordPair {
  string id = 1;
  Word word1 = 2;
  Word word2 = 3;
}

message Word {
  string id = 1;
  string word_value = 2;
  string country_code = 3;
}

message LogOutRequest{
  conabit.englearn.common.Session session = 1;
}

message RegisterWordPairRequest {
  conabit.englearn.common.Session session = 1;
  WordPair word_pair = 2;
}

message CloneWordPairRequest {
  conabit.englearn.common.Session sesion = 1;
  WordPair word_pair = 2;
}